; ModuleID = '/home/carl/AnghaBench/mpv/audio/out/extr_push.c_destroy_no_thread.c'
source_filename = "/home/carl/AnghaBench/mpv/audio/out/extr_push.c_destroy_no_thread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ao = type { %struct.TYPE_2__*, %struct.ao_push_state* }
%struct.TYPE_2__ = type { i32 (%struct.ao*)* }
%struct.ao_push_state = type { i32*, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ao*)* @destroy_no_thread to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @destroy_no_thread(%struct.ao* %0) #0 {
  %2 = alloca %struct.ao*, align 8
  %3 = alloca %struct.ao_push_state*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.ao* %0, %struct.ao** %2, align 8
  %6 = load %struct.ao*, %struct.ao** %2, align 8
  %7 = getelementptr inbounds %struct.ao, %struct.ao* %6, i32 0, i32 1
  %8 = load %struct.ao_push_state*, %struct.ao_push_state** %7, align 8
  store %struct.ao_push_state* %8, %struct.ao_push_state** %3, align 8
  %9 = load %struct.ao*, %struct.ao** %2, align 8
  %10 = getelementptr inbounds %struct.ao, %struct.ao* %9, i32 0, i32 0
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32 (%struct.ao*)*, i32 (%struct.ao*)** %12, align 8
  %14 = load %struct.ao*, %struct.ao** %2, align 8
  %15 = call i32 %13(%struct.ao* %14)
  store i32 0, i32* %4, align 4
  br label %16

16:                                               ; preds = %33, %1
  %17 = load i32, i32* %4, align 4
  %18 = icmp slt i32 %17, 2
  br i1 %18, label %19, label %36

19:                                               ; preds = %16
  %20 = load %struct.ao_push_state*, %struct.ao_push_state** %3, align 8
  %21 = getelementptr inbounds %struct.ao_push_state, %struct.ao_push_state* %20, i32 0, i32 0
  %22 = load i32*, i32** %21, align 8
  %23 = load i32, i32* %4, align 4
  %24 = sext i32 %23 to i64
  %25 = getelementptr inbounds i32, i32* %22, i64 %24
  %26 = load i32, i32* %25, align 4
  store i32 %26, i32* %5, align 4
  %27 = load i32, i32* %5, align 4
  %28 = icmp sge i32 %27, 0
  br i1 %28, label %29, label %32

29:                                               ; preds = %19
  %30 = load i32, i32* %5, align 4
  %31 = call i32 @close(i32 %30)
  br label %32

32:                                               ; preds = %29, %19
  br label %33

33:                                               ; preds = %32
  %34 = load i32, i32* %4, align 4
  %35 = add nsw i32 %34, 1
  store i32 %35, i32* %4, align 4
  br label %16

36:                                               ; preds = %16
  %37 = load %struct.ao_push_state*, %struct.ao_push_state** %3, align 8
  %38 = getelementptr inbounds %struct.ao_push_state, %struct.ao_push_state* %37, i32 0, i32 2
  %39 = call i32 @pthread_cond_destroy(i32* %38)
  %40 = load %struct.ao_push_state*, %struct.ao_push_state** %3, align 8
  %41 = getelementptr inbounds %struct.ao_push_state, %struct.ao_push_state* %40, i32 0, i32 1
  %42 = call i32 @pthread_mutex_destroy(i32* %41)
  ret void
}

declare dso_local i32 @close(i32) #1

declare dso_local i32 @pthread_cond_destroy(i32*) #1

declare dso_local i32 @pthread_mutex_destroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
